# realworld

./: .env  Cargo.toml  README.md  setup.sql
migrations/2019-12-16-073203_create_users/: up.sql
migrations/2019-12-20-035639_create_follows/: up.sql
migrations/2019-12-20-090432_create_articles/: up.sql
migrations/2019-12-20-091153_create_favorites/: up.sql
migrations/2019-12-20-091224_create_comments/: up.sql
src/: auth.rs  errors.rs  lib.rs  main.rs  schema.rs
src/api/: articles.rs  mod.rs  profile.rs  users.rs
src/db/: article.rs  articles.rs  comment.rs  mod.rs  profile.rs  user.rs
src/models/: mod.rs  user.rs
src/routes/: mod.rs  users.rs
